Fixed page poll layout on mobile

--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -1076,3 +1076,66 @@ a.pp-grey:hover, a.pp-grey:active
   text-align: left;
   padding-left: .5em;
 }
+
+.mobile-break
+{
+  display: none;
+}
+
+@media (max-width: 768px){
+  #navbar .navbar-brand img
+  {
+    height: 2em;
+  }
+  #navbar .navbar-brand
+  {
+    margin-top: .2em;
+  }
+  .navbar-nav>li
+  {
+    float: left;
+  }
+  .navbar-nav .open .dropdown-menu
+  {
+    position: absolute;
+    background: white;
+    left: -8em;
+    -webkit-box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow:    2px 2px 10px 0px rgba(0, 0, 0, 0.6);
+    box-shadow:         2px 2px 10px 0px rgba(0, 0, 0, 0.6);
+  }
+  #content
+  {
+    font-size: .8em;
+  }
+  #page-poll .poll-controls
+  {
+    margin-bottom: 1em;
+  }
+  #page-poll .scoring
+  {
+    font-size: .9em;
+    margin-top: 2.3em;
+  }
+  #page-poll .poll-content
+  {
+    margin-left: 6em;
+  }
+  #page-poll .label
+  {
+    white-space: pre-wrap;
+  }
+  #page-poll .poll-content .question
+  {
+    font-size: 2.2em;
+    margin-bottom: 1em;
+  }
+  #page-poll .poll-meta, #page-poll .label#label-choices, #page-poll .poll-content .choices
+  {
+    margin-left: -4.5em;
+  }
+  .mobile-break
+  {
+    display: inline;
+  }
+}
